--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.github.kmtstemail</groupId>
     <artifactId>TravisCITest</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-         
+
 
 
     <dependencies>
@@ -19,24 +18,42 @@
         </dependency>
     </dependencies>
 
-         <licenses>      
-  <license>
-    <name>Apache License, Version 2.0</name>
-    <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-    <distribution>repo</distribution>
-  </license>
-</licenses>
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
 
-<scm>
-  <connection>scm:git:https://github.com/kmtstemail/TravisCITest.git</connection>
-  <url>https://github.com/kmtstemail/TravisCITest</url>        
-</scm>
-         
+    <scm>
+        <connection>scm:git:https://github.com/kmtstemail/TravisCITest.git</connection>
+        <url>https://github.com/kmtstemail/TravisCITest</url>
+    </scm>
 
-<developers>
-  <developer>
-    <name>Ketan Mulay</name>
-    <email>kmtstemail@gmail.com</email>
-  </developer>
-</developers>
+
+    <developers>
+        <developer>
+            <name>Ketan Mulay</name>
+            <email>kmtstemail@gmail.com</email>
+        </developer>
+    </developers>
+
+
+    <distributionManagement>
+        <site>
+            <id>api.wiki</id>
+            <url>https://github.com/kmtstemail/TravisCITest/wiki</url>
+        </site>
+
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+
+    </distributionManagement>
 </project>
